--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/bootstrap-4.4.1-dist/css/bootstrap.min.css">
-    <title>Hello, world!</title>
+    <title>小徐的网站</title>
     <style>
       .myheader{
         background: url('/imgs/8.jpg');
